[package]
name = "nats-io"
version = "0.1.0"
authors = ["takuto <takuto.yoshikai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
rand = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "*"
